--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 .png filter=lfs diff=lfs merge=lfs -text
 .jpg filter=lfs diff=lfs merge=lfs -text
 .tif filter=lfs diff=lfs merge=lfs -text
+.mp4 filter=lfs diff=lfs merge=lfs -text
+.mkv filter=lfs diff=lfs merge=lfs -text
