<Design> Redesigning the MRI Area so that it looks like the real one
Mini design changes

<Design> Changed a bit the design

<Design> Improved

<Design> Improved again

<Feature> Design MRI room + package

<Design> Advanced the design a bit

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,6 @@ crashlytics-build.properties
 
 
 /[Aa]ssets/HospitalPack/
+/[Aa]ssets/OfficeAndPoliceStation/
 /[Pp]ackages/com.crispgroup.vrassetspackage/
+/[Pp]ackages/com.crispgroup.vrassetspackage2/
